--- a/r2-demo-player.html
+++ b/r2-demo-player.html
@@ -1,3 +1,4 @@
+<!-- This is not a part of the application. It just a demo to view a video of hls url-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,7 +15,7 @@
     <script>
       const video = document.getElementById("video");
       const videoSrc =
-        "https://cdn.streamscale.aksdev.me/666d55ed785875a3ffe67865/BigBunnyTrailer/master.m3u8";
+        "https://pub-edb9d66a566a409ab1bf346a0f47bb12.r2.dev/uploads/684dc7705eb6cceb72a369c4/haka_2cc69307/master.m3u8";
 
       if (Hls.isSupported()) {
         const hls = new Hls();
